--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "build/src/server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node build/src/server.js",
+    "start": "cross-env NODE_ENV=production node build/src/server.js",
     "dev": "cross-env NODE_ENV=development npx nodemon",
     "build": "node_modules/.bin/rimraf ./build && npx tsc",
+    "test": "cross-env NODE_ENV=test && yarn migration && yarn jest --coverage --detectOpenHandles",
     "test": "cross-env NODE_ENV=test && yarn migration && yarn jest --coverage --detectOpenHandles",
     "test:watch": "yarn test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
     "prepare": "husky install",
     "watch": "tsc -w",
-    "undoMigrations": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "migration": "yarn migrate:undo && yarn migrate",
     "migrate": "cross-env NODE_ENV=test npx sequelize-cli db:migrate",
-    "migration": "yarn undoMigrations && yarn migrate",
-    "migrateDev": "cross-env NODE_ENV=development npx sequelize-cli db:migrate"
+    "migrate:undo": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "migrate:dev": "yarn migrate:dev:undo && yarn migrate:dev:all",
+    "migrate:dev:all": "cross-env NODE_ENV=development npx sequelize-cli db:migrate",
+    "migrate:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:migrate:undo:all",
+    "seed": "yarn seed:dev:undo && yarn seed:dev",
+    "seed:dev": "cross-env NODE_ENV=development npx sequelize-cli db:seed:all",
+    "seed:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:seed:undo:all"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -63,16 +70,18 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.33.0",
+    "eslint": "8.1.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
     "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "sequelize-cli": "^6.6.0",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
