--- a/docs/product.docs.yaml
+++ b/docs/product.docs.yaml
@@ -59,6 +59,29 @@ paths:
         200:
           description: A list of search results
 
+  /api/v1/product/delete/{id}:
+    delete:
+      summary: delete a product
+      tags: [Product Routes]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: please fill all required fields
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        201:
+          description: Product deleted
+        401:
+          description: Unauthorized
+        400:
+          description: product not availble          
+
+
+
 # schemas
 components:
   schemas:
