--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "E-commerce backend API",
   "main": "build/src/server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node build/src/server.js",
-    "start": "cross-env NODE_ENV=production node build/src/server.js",
+    "start": "node build/src/server.js",
     "dev": "cross-env NODE_ENV=development npx nodemon",
     "build": "node_modules/.bin/rimraf ./build && npx tsc",
-    "test": "cross-env NODE_ENV=test && yarn migration && yarn jest --coverage --detectOpenHandles",
-    "test": "cross-env NODE_ENV=test && yarn migration && yarn jest --coverage --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test && yarn migration && yarn seed:test && yarn jest --coverage --detectOpenHandles",
     "test:watch": "yarn test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -84,7 +82,6 @@
     "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
-    "sequelize-cli": "^6.6.0",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
