--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "openapi-types": "^12.1.0",
     "passport": "^0.6.0",
@@ -66,6 +68,7 @@
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth2": "^0.1.5",
