--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 services:
-  app:
+  ecom-api:
     container_name: app
     build: .
     ports:
@@ -10,19 +10,19 @@ services:
     depends_on:
       - db
     volumes:
-      - .:/usr/src/app
-
+      - .:/app
+      - /node_modules
   db:
-    container_name: postgres
-    image: postgres
+    image: postgres:14
+    restart: always
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - "5433:${DB_PORT}"
+      - 5433:${DB_PORT}
     volumes:
-      - data:/data/db
-
+      - db:/var/lib/postgresql/data
 volumes:
-  data: {}
+  db:
+    driver: local
