--- a/docs/order.docs.yaml
+++ b/docs/order.docs.yaml
@@ -6,9 +6,9 @@ paths:
       tags: [ORDERS]
       summary: make order.
       responses:
-        '200':
+        "200":
           description: order created
-        '400':
+        "400":
           description: Bad request. Product ID must be an integer and larger than 0.
 
   #get all order
@@ -18,11 +18,10 @@ paths:
       tags: [ORDERS]
       summary: get all your orders
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad request. User ID must be an integer and larger than 0.
-
 
   # get order starts
   /api/v1/order/status/{orderId}:
@@ -36,11 +35,10 @@ paths:
           required: true
           description: The Id on order you.
           schema:
-            type: integer
-            format: int64
+            type: string
             minimum: 1
       responses:
-        '200':
+        "200":
           description: OK
 
   # update order status starts
@@ -55,8 +53,7 @@ paths:
         required: true
         description: The ID of the order to update.
         schema:
-          type: integer
-          format: int64
+          type: string
           minimum: 1
       - name: status
         in: body
@@ -70,9 +67,8 @@ paths:
               enum: [Pending, Shipped, Delivered]
               example: Shipped/Delivered
     responses:
-      '200':
+      "200":
         description: OK
-
 
   #delete all order
 /api/v1/order/alll:
@@ -81,7 +77,7 @@ paths:
     tags: [ORDERS]
     summary: delete all your ORDERS
     responses:
-      '200':
+      "200":
         description: OK
-      '401':
-        description: Unauthorized  
+      "401":
+        description: Unauthorized
