--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "eslint-plugin-typescript": "^0.14.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
@@ -77,7 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "coveralls": "^3.1.1",
-    "eslint": "8.1.0",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
